--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"preview": "vite preview",
 		"deploy": "bun run _deploy.ts",
 		"buildDeploy": "bun run build && bun run deploy",
-		"buildPkg": "cmd /c \"if exist build rmdir /s /q build\" && cd src/router_src && tsc && cp plugin/_gen*.ts ../../build/plugin"
+		"buildPkg": "cmd /c \"if exist build rmdir /s /q build\" && cd src/router_src && tsc && cp plugin/_gen*.ts ../../build/plugin && cp -R plugin/sample ../../build/plugin/sample"
 	},
 	"dependencies": {
 		"@preact/signals": "2.0.0",
