--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 			"types": "./build/plugin/routerPlugin.d.ts"
 		}
 	},
-	"type": "commonjs",
+	"type": "module",
 	"author": "Nicolas VENTER",
 	"license": "MIT",
 	"repository": {
@@ -40,8 +40,6 @@
 	},
 	"dependencies": {
 		"@preact/signals": "2.0.0",
-		"react": "18.3.1",
-		"react-dom": "18.3.1",
 		"vite-plugin-watch": "vite-plugin-watch-0.4.0.tgz"
 	},
 	"devDependencies": {
@@ -56,7 +54,9 @@
 		"eslint-plugin-react-hooks": "5.0.0",
 		"eslint-plugin-react-refresh": "0.4.16",
 		"globals": "15.13.0",
-		"typescript": "~5.6.2",
+		"preact": "10.25.4",
+		"react": "npm:@preact/compat",
+		"react-dom": "npm:@preact/compat",
 		"typescript-eslint": "8.18.1",
 		"vite": "6.0.3"
 	}
