use of react + remove of useReact

--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
 		"zip": "7z a EasyReactRouter.zip -r src/libs/EasyReactRouter z_ToCopy vite-plugin-watch-0.4.0.tgz"
 	},
 	"dependencies": {
-		"@preact/signals": "2.0.0",
+		"@preact/signals": "npm:@preact/signals-react",
+		"@preact/signals-react": "3.0.0",
+		"@preact/signals-react-transform": "0.5.1",
 		"vite-plugin-watch": "vite-plugin-watch-0.4.0.tgz"
 	},
 	"devDependencies": {
 		"@eslint/js": "9.17.0",
-		"@preact/preset-vite": "2.9.4",
 		"@types/bun": "1.1.16",
 		"@types/node": "22.10.5",
 		"@types/react": "19.0.4",
@@ -41,9 +42,8 @@
 		"eslint-plugin-react-hooks": "5.1.0",
 		"eslint-plugin-react-refresh": "0.4.16",
 		"globals": "15.14.0",
-		"preact": "10.25.4",
-		"react": "npm:@preact/compat",
-		"react-dom": "npm:@preact/compat",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
 		"typescript-eslint": "8.19.1"
 	}
 }
