--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
 		"module": "ESNext",
 		"skipLibCheck": true,
 		"paths": {
-			"easy-react-router": ["./src/libs/EasyReactRouter"],
-			"@preact/signals": ["./node_modules/@preact/signals-react/"]
+			"react": ["./node_modules/preact/compat/"],
+			"react/jsx-runtime": ["./node_modules/preact/jsx-runtime"],
+			"react-dom": ["./node_modules/preact/compat/"],
+			"react-dom/*": ["./node_modules/preact/compat/*"],
+			"easy-react-router": ["./src/libs/EasyReactRouter"]
 		},
 
 		/* Bundler mode */
