--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"scripts": {
 		"dev": "bun run _genClientEnv.ts && vite",
-		"genHtml": "bun ./src/libs/EasyReactRouter/plugin/_genRoutes.ts --html dist/index.html",
+		"genHtml": "bun run ./src/libs/EasyReactRouter/plugin/_genRoutes.ts --html dist/index.html",
 		"build": "cross-env B_PROD=true bun run _genClientEnv.ts && bun run _build.ts && bun run genHtml",
 		"_build": "cross-env B_PROD=true bun run _genClientEnv.ts && tsc -b && vite build && bun run genHtml",
 		"lint": "eslint .",
